deploy/lab/minio/base/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minio
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
        - name: minio-data-vol
          persistentVolumeClaim:
            claimName: minio-data
      containers:
        - name: minio
          image: minio/minio:latest
          args: ["server", "/data", "--console-address", ":9001"]
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 128Mi
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - mountPath: "/data"
              name: minio-data-vol
